[tool.poetry]
name = "question-generator-service"
version = "0.1.0"
description = "A content generator service that creates content on keywords"
authors = ["Joe Maliszewski <joe.t.maliszewski@gmail.com>"]
license = "Not open source"
homepage = "https://github.com/swarmai/question-generator-service"
repository = "https://github.com/swarmai/question-generator-service"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
dvc = "^3.24.0"
pandas = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
